# game_of_life

./: CMakeLists.txt  Info.plist  main.cpp
controller/: AbstractController.cpp  AbstractController.hpp  ConsoleController.cpp  ConsoleController.hpp  GUIController.cpp  GUIController.hpp
core/: AbstractCell.cpp  AbstractCell.hpp  AbstractGrid.cpp  AbstractGrid.hpp  Algorithm.cpp  Algorithm.hpp  CellFactory.cpp  CellFactory.hpp  ClassicCell.cpp  ClassicCell.hpp  ClassicGrid.cpp  ClassicGrid.hpp  File.cpp  File.hpp  GridFactory.cpp  GridFactory.hpp  ObstacleCell.cpp  ObstacleCell.hpp  Params.cpp  Params.hpp  Parser.cpp  Parser.hpp  ToricGrid.cpp  ToricGrid.hpp  TxtFile.cpp  TxtFile.hpp  TxtParser.cpp  TxtParser.hpp
lib/nativefiledialog-extended-1.2.1/src/: CMakeLists.txt
lib/nativefiledialog-extended-1.2.1/test/: CMakeLists.txt
utils/: Slider.cpp  Slider.hpp
view/: AbstractView.cpp  AbstractView.hpp  ConsoleView.cpp  ConsoleView.hpp  GUIView.cpp  GUIView.hpp  Slider.cpp  Slider.h
